--- a/cdo_ansible/roles/cdo_get_devices/tasks/main.yml
+++ b/cdo_ansible/roles/cdo_get_devices/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - name: Get CDO devices
   vars:
-    relative_path: "/aegis/rest/v1/services/targets/devices{{query}}"
-  uri:
+    relative_path: "/aegis/rest/v1/services/targets/devices{{api_query}}"
+  ansible.builtin.uri:
     headers:
       Authorization: "Bearer {{api_key}}"
     url: "https://{{cdo_region}}{{relative_path}}"
@@ -10,5 +10,5 @@
   register: device_data
 
 - name: debug cdo_get_devices
-  debug: msg="device data {{device_data}}"
+  ansible.builtin.debug: msg="device data {{device_data}}"
   when: play_debug == true
