--- a/cdo_ansible/roles/cdo_get_sdc_list/tasks/main.yml
+++ b/cdo_ansible/roles/cdo_get_sdc_list/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Get SDCs
   vars:
     relative_path: "/aegis/rest/v1/services/targets/proxies"
-  uri:
+  ansible.builtin.uri:
     headers:
       Authorization: "Bearer {{api_key}}"
     url: "https://{{cdo_region}}{{relative_path}}"
@@ -11,5 +11,5 @@
   register: sdc_list
 
 - name: debug GET SDCs
-  debug: var=sdc_list.json
+  ansible.builtin.debug: var=sdc_list.json
   when: play_debug == true
