--- a/cdo_ansible/onboard_cdo.yml
+++ b/cdo_ansible/onboard_cdo.yml
@@ -27,22 +27,22 @@
         device_port: "{{hostvars[inventory_hostname].port if hostvars[inventory_hostname].port is defined}}"
         username: "{{hostvars[inventory_hostname].username if hostvars[inventory_hostname].username is defined}}"
         password: "{{hostvars[inventory_hostname].password if hostvars[inventory_hostname].password is defined}}"
-      
+
     ###############################################################################
-    # Onboard ASA devcies
+    # Onboard ASA or IOS devcies
     ###############################################################################
     - name: Add ASAs to CDO
       block:
         - name: Get the SDC/CDG/SEC connector details (query by by name)
           vars:
             search_lar_name: "{{lar_name}}"
-          import_role:
+          ansible.builtin.import_role:
             name: cdo_get_connector
-        
+
         - name: create the device in CDO
           vars:
             payload:
-              deviceType: ASA
+              deviceType: "{{device_type}}"
               host: "{{device_ip}}"
               ipv4: "{{device_ip}}:{{device_port if device_port is defined else ''}}"
               larType: "{{ 'CDG' if connector.cdg is true else 'SDC' }}"
@@ -51,38 +51,49 @@
               model: false
               metadata:
                 isNewPolicyObjectModel: true
-          import_role:
+          ansible.builtin.import_role:
             name: cdo_add_device
-        
+
         - name: poll device for connectivity
           vars:
-            query: "/{{cdo_device.json.uid}}"
-            retries: 6
-            delay: 5
-          import_role:
+            api_query: "/{{cdo_device.json.uid}}"
+            api_retries: 6
+            api_delay: 5
+          ansible.builtin.import_role:
             name: cdo_get_device_connectivty_state
-        
+
         - name: encrypt device credentials using LAR public key
-          import_role:
+          ansible.builtin.import_role:
             name: cdo_encrypt_credentials
-        
+
         - name: get sepecific device uid
           vars:
             original_uid: "{{cdo_device.json.uid}}"
-          import_role:
+          ansible.builtin.import_role:
             name: cdo_get_specific_device
-        
-        - name: add device credentials
+          when: device_type | upper == "ASA"
+          
+        - name: add ASA credentials
           vars:
             specific_uid: "{{specific_device.json.uid}}"
             payload:
               state: CERT_VALIDATED
               credentials: "{{ credentials | to_json}}"
-          import_role:
+          ansible.builtin.import_role:
             name: cdo_add_asa_credentials
-            
-      when: device_type | upper == "ASA"
-      
+          when: device_type | upper == "ASA"
+
+        - name: add IOS credentials
+          vars:
+            device_uid: "{{cdo_device.json.uid}}"
+            payload:
+              stateMachineContext:
+                acceptCert: true
+              credentials: "{{ credentials | to_json}}"
+          ansible.builtin.import_role:
+            name: cdo_add_credentials
+          when: device_type | upper == "IOS"
+      when: device_type | upper == "ASA" or device_type | upper == "IOS"
 
       ###############################################################################
       # Onboard FTD devcies
@@ -92,31 +103,31 @@
       block:
         - name: Get cdFMC details
           vars:
-            query: "?q=deviceType:FMCE"
+            api_query: "?q=deviceType:FMCE"
             uid: "{{device_data.json[0].uid}}"
-          import_role:
+          ansible.builtin.import_role:
             name: cdo_get_devices
-        
+
         - name: get the domain uid of the global domain in cdFMC
           vars:
             domain_uid: "{{specific_device.json.domainUid}}"
             original_uid: "{{uid}}"
-          import_role:
+          ansible.builtin.import_role:
             name: cdo_get_specific_device
-        
+
         - name: Get access policy list from cdFMC
           vars:
             cdfmc_hostname: "{{device_data.json[0].host}}"
-            query: "?limit=1000"
+            api_query: "?limit=1000"
             json_query_string: "[?name==`{{access_control_policy}}`].{name:name, id:id} | [0]"
             matched_policy: "{{cdfmc_access_policy_list.json['items'] | json_query(json_query_string)}}"
-          import_role:
+          ansible.builtin.import_role:
             name: cdfmc_get_access_policy_list
-        
+
         - name: Fail if policy not found
-          fail: msg="{{access_control_policy}} access policy not found on cdFMC"
+          ansible.builtin.fail: msg="{{access_control_policy}} access policy not found on cdFMC"
           when: matched_policy | length < 1
-        
+
         - name: Add device to cdo
           vars:
             payload:
@@ -132,39 +143,39 @@
                 "license_caps": "{{licenses}}"
                 "performanceTier": "{{performance_tier}}"
             new_device_uid: "{{cdo_device.json.uid}}"
-          import_role:
+          ansible.builtin.import_role:
             name: cdo_add_device
-        
+
         - name: Get specific device and wait for a 200 status code to be returned
           vars:
             specific_device:
-            retries: 5
-            delay: 5
+            api_retries: 5
+            api_delay: 5
             original_uid: "{{new_device_uid}}"
-          import_role:
+          ansible.builtin.import_role:
             name: cdo_get_specific_device
-        
+
         - name: Initiate FTD onboarding process
           vars:
             specific_uid: "{{specific_device.json.uid}}"
             method: "PUT"
             payload:
               queueTriggerState: INITIATE_FTDC_ONBOARDING
-          import_role:
+          ansible.builtin.import_role:
             name: cdo_services_ftd
-        
+
         - name: Get CLI registration
           vars:
-            query: "/{{cdo_device.json.uid}}"
-          import_role:
+            api_query: "/{{cdo_device.json.uid}}"
+          ansible.builtin.import_role:
             name: cdo_get_devices
           # when: onboard_method | upper == "CLI"
           # TODO: add LTP onboarding method....
-        
+
         - name: see here
-          debug: msg="{{device_data}}"
-        
+          ansible.builtin.debug: msg="{{device_data}}"
+
         - name: debug Get CLI registration
-          debug: msg="CLI REG {{device_data.json.metadata.generatedCommand}}"
+          ansible.builtin.debug: msg="CLI REG {{device_data.json.metadata.generatedCommand}}"
 
       when: device_type | upper == "FTDC"
