--- a/cdo_ansible/roles/cdo_services_ftd/tasks/main.yml
+++ b/cdo_ansible/roles/cdo_services_ftd/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Get specific device details and immediately return results
   vars:
     relative_path: "/aegis/rest/v1/services/firepower/ftds/{{specific_uid}}"
-  uri:
+  ansible.builtin.uri:
     headers:
       Authorization: "Bearer {{api_key}}"
     url: "https://{{cdo_region}}{{relative_path}}"
@@ -11,10 +11,10 @@
     body: "{{ payload | to_json }}"
     body_format: json
   until: ftd_service.status == 200
-  retries: "{{retries if retries is defined else 1}}"
-  delay: "{{delay if delay is defined else 2}}"
+  retries: "{{api_retries if api_retries is defined else 1}}"
+  delay: "{{api_delay if api_delay is defined else 2}}"
   register: ftd_service
 
 - name: debug ftd_service result
-  debug: var=ftd_service
+  ansible.builtin.debug: var=ftd_service
   when: play_debug == true
