refacotring and cleanup

--- a/cdo_ansible/cdo_change_asa_password.yml
+++ b/cdo_ansible/cdo_change_asa_password.yml
@@ -21,7 +21,7 @@
         cdo_headers:
           Authorization: "Bearer {{api_key}}"
         search_lar_name: "{{lar_name}}"
-        proxies: "{{cdo_get}}"
+        proxies: "{{get_result}}"
       ansible.builtin.import_role:
         name: cdo_get
 
@@ -53,7 +53,7 @@
     
     - name: set ASA uid
       ansible.builtin.set_fact:
-        asa_uid: "{{cdo_get.json[0].uid}}"
+        asa_uid: "{{get_result.json[0].uid}}"
 
     - name: get the ASA specific device uid
       vars:
@@ -65,7 +65,7 @@
         
     - name: set the specific uid of the ASA
       ansible.builtin.set_fact:
-        asa_specific_uid: "{{cdo_get.json.uid}}"
+        asa_specific_uid: "{{get_result.json.uid}}"
         
     - name: debug specific uid of the ASA
       debug: msg="{{asa_specific_uid}}"
