--- a/cdo_ansible/roles/cdo_get/tasks/main.yml
+++ b/cdo_ansible/roles/cdo_get/tasks/main.yml
@@ -4,7 +4,7 @@
     headers: "{{cdo_headers}}"
     url: "https://{{cdo_region}}{{relative_path}}"
     method: "GET"
-  until: cdo_get.status == 200
+  until: get_result.status == 200
   retries: "{{api_retries if api_retries is defined else 1}}"
   delay: "{{api_delay if api_delay is defined else 1}}"
-  register: cdo_get
+  register: get_result
