--- a/cdo_ansible/roles/cdo_get_device_connectivty_state/tasks/main.yml
+++ b/cdo_ansible/roles/cdo_get_device_connectivty_state/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Get CDO devices
-  vars:
-    relative_path: "/aegis/rest/v1/services/targets/devices{{api_query}}"
+  # vars:
+  #   relative_path: "/aegis/rest/v1/services/targets/devices{{api_query}}"
   ansible.builtin.uri:
     headers:
       Authorization: "Bearer {{api_key}}"
