--- a/cdo_ansible/cdo_change_asa_password.yml
+++ b/cdo_ansible/cdo_change_asa_password.yml
@@ -9,7 +9,8 @@
     # Load devices to onboard and API keys from inventory
     - name: Get this devices settings from host varaibles
       ansible.builtin.set_fact:
-        cdo_region: "{{ hostvars[inventory_hostname]['cdo_region'] }}"
+        # api_key: from group_vars
+        # cdo_region: from group_vars
         device_name: "{{ inventory_hostname }}"
         lar_name: "{{ hostvars[inventory_hostname].lar_name}}"
         username: "{{ hostvars[inventory_hostname].username }}"
