--- a/cdo_ansible/cdo_change_asa_password.yml
+++ b/cdo_ansible/cdo_change_asa_password.yml
@@ -1,12 +1,12 @@
 ---
-- name: Add Devices to CDO
+- name: Change ASA password in CDO (SDC)
   become: false
   hosts: all
   connection: local
 
   tasks:
     ###########################################################################
-    # Load devices to onboard and API keys from inventory
+    # Load devices details and API keys from inventory
     - name: Get this devices settings from host varaibles
       ansible.builtin.set_fact:
         # api_key: from group_vars
