--- a/cdo_ansible/cdo_onboard.yml
+++ b/cdo_ansible/cdo_onboard.yml
@@ -31,20 +31,18 @@
     ansible.builtin.set_fact:
       api_key: "{{ tenant.api_key }}"
       cdo_region: "{{ tenant.cdo_region }}"
-      # api_key: "{{ tenant['api_key'] }}"
-      # cdo_region: "{{ tenant['cdo_region'] }}"
-      # device_name: "{{inventory_hostname}}"
-      # device_type: "{{.device_type | upper if hostvars[inventory_hostname].device_type | upper != 'FTD' else 'FTDC'}}"
-#         onboard_method: "{{hostvars[inventory_hostname].onboard_method if hostvars[inventory_hostname].onboard_method is defined}}"
-#         serial_number: "{{hostvars[inventory_hostname].serial_number if hostvars[inventory_hostname].serial_number is defined}}"
-#         access_control_policy: "{{hostvars[inventory_hostname].access_control_policy if hostvars[inventory_hostname].access_control_policy is defined}}"
-#         licenses: "{{ hostvars[inventory_hostname].licenses | join(',') if hostvars[inventory_hostname].licenses is defined}}"
-#         performance_tier: "{{hostvars[inventory_hostname].performance_tier if hostvars[inventory_hostname].performance_tier is defined}}"
-#         lar_name: "{{hostvars[inventory_hostname].lar_name if hostvars[inventory_hostname].lar_name is defined}}"
-#         device_ip: "{{hostvars[inventory_hostname].ip_address if hostvars[inventory_hostname].ip_address is defined}}"
-#         device_port: "{{hostvars[inventory_hostname].port if hostvars[inventory_hostname].port is defined}}"
-#         username: "{{hostvars[inventory_hostname].username if hostvars[inventory_hostname].username is defined}}"
-#         password: "{{hostvars[inventory_hostname].password if hostvars[inventory_hostname].password is defined}}"
+      device_name: "{{ device.device_name }}"
+      device_type: "{{ device.device_type | upper if device.device_type | upper != 'FTD' else 'FTDC' }}"
+      onboard_method: "{{ device.onboard_method if device.onboard_method is defined }}"
+      serial_number: "{{ device.serial_number if device.serial_number is defined }}"
+      access_control_policy: "{{ device.access_control_policy if device.access_control_policy is defined}}"
+      licenses: "{{ device.licenses | join(',') if device.licenses is defined }}"
+      performance_tier: "{{ device.performance_tier if device.performance_tier is defined }}"
+      lar_name: "{{ device.lar_name if device.lar_name is defined }}"
+      device_ip: "{{ device.ip_address if device.ip_address is defined }}"
+      device_port: "{{ device.port if device.port is defined }}"
+      username: "{{ device.username if device.username is defined }}"
+      password: "{{ device.password if device.password is defined }}"
 # 
 #     ###############################################################################
 #     # Onboard ASA and IOS devcies
